@@ -14,14 +14,16 @@ import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
+import java.util.concurrent.ThreadLocalRandom;
 import java.util.stream.Collectors;
 
 @Component
 @Profile("generateData")
-@DependsOn({"ticketDataGenerator", "performanceDataGenerator", "merchandiseDataGenerator"})
+@DependsOn({"ticketDataGenerator"})
 public class PurchaseDataGenerator {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(PurchaseDataGenerator.class);
@@ -31,7 +33,8 @@ public class PurchaseDataGenerator {
     private final MerchandiseRepository merchandiseRepository;
     private final Random random = new Random();
 
-    public PurchaseDataGenerator(PurchaseRepository purchaseRepository, TicketRepository ticketRepository, MerchandiseRepository merchandiseRepository) {
+    public PurchaseDataGenerator(PurchaseRepository purchaseRepository,
+        TicketRepository ticketRepository, MerchandiseRepository merchandiseRepository) {
         this.purchaseRepository = purchaseRepository;
         this.ticketRepository = ticketRepository;
         this.merchandiseRepository = merchandiseRepository;
@@ -51,29 +54,51 @@ public class PurchaseDataGenerator {
     }
 
     private void createPurchasesForUser(Long userId) {
-        List<Ticket> reservedTickets = ticketRepository.findAll().stream()
-            .filter(ticket -> ticket.getStatus().equals("RESERVED"))
-            .collect(Collectors.toList());
-
-        /*List<Ticket> purchasedTickets = ticketRepository.findAll().stream()
+        List<Ticket> purchasedTickets = ticketRepository.findAll().stream()
             .filter(ticket -> ticket.getStatus().equals("SOLD"))
-            .collect(Collectors.toList());*/
+            .collect(Collectors.toList());
 
         List<Merchandise> allMerchandise = merchandiseRepository.findAll();
 
-        if (reservedTickets.size() < 2 || /*purchasedTickets.size() < 2 ||*/ allMerchandise.isEmpty()) {
-            LOGGER.warn("Not enough reserved or purchased tickets or merchandise to create purchases.");
+        if (purchasedTickets.size() < 2 || allMerchandise.isEmpty()) {
+            LOGGER.warn("Not enough purchased tickets or merchandise to create purchases.");
             return;
         }
 
-        for (int i = 0; i < 2; i++) { // 2 purchases per user
+        for (int i = 0; i < 4; i++) { // 2 purchases per user
             // Je 2 gekaufte und reservierte Tickets
+            LocalDate cutoffDate = LocalDate.of(2025, 6, 23);
+            boolean validSelection = false;
+
             List<Long> ticketIds = new ArrayList<>();
-            //ticketIds.addAll(getRandomIds(purchasedTickets, 2));
-            ticketIds.addAll(getRandomIds(reservedTickets, 2));
+            int attempts = 0;
+            while (!validSelection && attempts < 30) {
+                ticketIds.clear();
+                ticketIds.addAll(getRandomIds(purchasedTickets, 2));
+
+                boolean allAfterCutoff = ticketIds.stream()
+                    .map(ticketRepository::findByTicketId)
+                    .allMatch(ticket -> ticket.getDate().isAfter(cutoffDate.atStartOfDay()));
+
+                boolean allBeforeCutoff = ticketIds.stream()
+                    .map(ticketRepository::findByTicketId)
+                    .allMatch(ticket -> ticket.getDate().isBefore(cutoffDate.atStartOfDay()));
+
+                validSelection = allAfterCutoff || allBeforeCutoff;
+                attempts++;
+            }
+
+            if (!validSelection) {
+                LOGGER.info("Could not find valid tickets for user {} after 10 attempts.", userId);
+                return; // Überspringe diesen Benutzer
+            }
 
             // 2 Merchandise-Artikel je Kauf
             List<Long> merchandiseIds = getRandomIds(allMerchandise, 2);
+
+            List<Long> merchandiseQuantities = new ArrayList<>();
+            merchandiseQuantities.add(ThreadLocalRandom.current().nextLong(1, 6));
+            merchandiseQuantities.add(ThreadLocalRandom.current().nextLong(1, 6));
 
             // Berechnung des Gesamtpreises
             Long totalPrice = calculateTotalPrice(ticketIds, merchandiseIds);
@@ -84,11 +109,15 @@ public class PurchaseDataGenerator {
                 ticketIds,
                 merchandiseIds,
                 totalPrice,
-                getRandomPastDate()
+                getRandomPastDate(),
+                merchandiseQuantities,
+                "ExampleStreet",
+                "ExamplePostalCode",
+                "ExampleCity"
             );
 
             purchaseRepository.save(purchase);
-            LOGGER.debug("Created purchase for user {}: {}", userId, purchase);
+            LOGGER.info("Created purchase for user {}: {}", userId, purchase);
         }
     }
 
@@ -98,12 +127,12 @@ public class PurchaseDataGenerator {
             .distinct()
             .limit(count)
             .mapToObj(i -> {
-                if (items.getFirst() instanceof Ticket) {
+                if (items.get(0) instanceof Ticket) { // Prüfe das erste Element
                     return ((Ticket) items.get(i)).getTicketId();
-                } else if (items.getFirst() instanceof Merchandise) {
+                } else if (items.get(0) instanceof Merchandise) {
                     return ((Merchandise) items.get(i)).getMerchandiseId();
                 }
-                return null;
+                throw new IllegalArgumentException("Unsupported item type in list.");
             })
             .collect(Collectors.toList());
     }
@@ -112,13 +141,16 @@ public class PurchaseDataGenerator {
         List<Ticket> tickets = ticketRepository.findAllById(ticketIds);
         List<Merchandise> merchandise = merchandiseRepository.findAllById(merchandiseIds);
 
-        long ticketTotal = tickets.stream().mapToLong(ticket -> ticket.getPrice().longValue()).sum();
-        long merchandiseTotal = merchandise.stream().mapToLong(item -> item.getPrice().longValue()).sum();
+        long ticketTotal = tickets.stream().mapToLong(ticket -> ticket.getPrice().longValue())
+            .sum();
+        long merchandiseTotal = merchandise.stream().mapToLong(item -> item.getPrice().longValue())
+            .sum();
 
         return ticketTotal + merchandiseTotal;
     }
 
-    private LocalDate getRandomPastDate() {
-        return LocalDate.now().minusDays(random.nextInt(1000));
+    private LocalDateTime getRandomPastDate() {
+        return LocalDateTime.now().minusDays(random.nextInt(365 * 3)).minusHours(random.nextInt(24))
+            .minusMinutes(random.nextInt(60));
     }
 }
